# music-relay

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  PROTOCOL.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml
crates/relay-core/: Cargo.toml
crates/relay-core/src/: centrifugo.rs  config.rs  lib.rs  oauth.rs  relay.rs  spotify.rs  state.rs  token.rs
crates/relay-headless/: Cargo.toml
crates/relay-headless/src/: config.rs  main.rs  platform.rs
deploy/: music-relay.service
docs/: architecture_audit.md
src/: App.tsx  Settings.tsx  Status.tsx  styles.css
src-tauri/: Cargo.toml  music-relay.desktop  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: centrifugo.rs  config.rs  lib.rs  main.rs  oauth.rs  platform.rs  relay.rs  spotify.rs  state.rs
