[package]
name = "music-relay"
version = "0.1.0"
edition = "2021"

[lib]
name = "music_relay_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "music-relay"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-autostart = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
url = "2"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
log = "0.4"
env_logger = "0.11"
open = "5"
