[package]
name = "music-relay"
version = "1.5.2"
edition = "2021"

[lib]
name = "music_relay_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "music-relay"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
relay-core = { path = "../crates/relay-core" }
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
open = "5"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
