[package]
name = "relay-headless"
version = "1.3.0"
edition = "2021"

[[bin]]
name = "relay-headless"
path = "src/main.rs"

[dependencies]
relay-core = { path = "../relay-core" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
dirs = "6"
ctrlc = { version = "3", features = ["termination"] }
